[package]
name = "live-card-png"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# UPDATE: Bumped worker to 0.7.4 to match the latest build tool
worker = "0.7.4" 
console_error_panic_hook = { version = "0.1.7", optional = true }

# SVG & Graphics
resvg = { version = "0.43.0", default-features = false, features = ["text", "raster-images"] }
tiny-skia = "0.11"
usvg = { version = "0.43.0", default-features = false, features = ["text"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
futures = "0.3"